# gtmcp

./: .gitignore  DEPENDENCY_UPDATES.md  DEPLOYMENT.md  OSCAR_IMPROVEMENTS.md  README.md  SSL_SETUP.md  UPDATES_SUMMARY.md  config-ssl-example.json  config.json  diagnose_ssl.sh  generate_test_ssl.sh  gtmcp-ssl.service  pyproject.toml  requirements.txt  setup.sh  setup_ssl.sh  setup_ssl_simple.sh  setup_ssl_v2.sh  start_server.sh  start_server_chatgpt.sh  start_server_expanded.sh  start_server_http.sh  start_server_ssl.sh  test_expanded_server.py  test_server.py  validate_oscar_improvements.py
src/gtmcp/: __init__.py  config.py  exceptions.py  models.py  scraper.py  server.py  server_expanded.py  server_fastapi.py  server_http.py
src/gtmcp/clients/: __init__.py  base_client.py  base_client_broken.py  oscar_client.py  places_client.py  smartech_client.py
ssl/: server.crt  server.csr  server.key
tests/: __init__.py  conftest.py  test_base_client.py  test_basic_functionality.py  test_config.py  test_external_server.py  test_fastapi_server.py  test_integration_workflows.py  test_models.py  test_oscar_client.py  test_places_client.py  test_scraper.py  test_server.py  test_server_expanded.py  test_smartech_client.py
