[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtmcp"
version = "2.1.0"
description = "Georgia Tech Comprehensive MCP Server - Multi-system integration platform with OSCAR 500 error fixes, SMARTech research, and campus services"
authors = [{name = "GT MCP Server", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core MCP and server framework
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.5.0",
    
    # Expanded functionality dependencies
    "geopy>=2.3.0",
    "networkx>=3.2.0", 
    "python-dateutil>=2.8.0",
    "aiohttp>=3.9.0",
    "xmltodict>=0.13.0",
    
    # MCP server dependencies
    "anyio>=4.5.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6.1",
    "starlette>=0.27.0",
    "uvicorn>=0.23.1",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
    "aioresponses>=0.7.4",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
gtmcp = "gtmcp.server:main"
gtmcp-expanded = "gtmcp.server_expanded:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true